asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_function_type_return_type.asteriacore
x : forall {f : Type -> Type}.
    forall {f : Type -> Type}.
      a -> f
  = x
  ;;
